[gd_scene load_steps=8 format=3 uid="uid://c24g0w2phgcpt"]

[ext_resource type="PackedScene" uid="uid://btcndwnny6dxe" path="res://Games/RingToss/Bottle.tscn" id="1_su4lb"]
[ext_resource type="Script" path="res://Games/RingToss/BottleStand.gd" id="1_ucxgr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5n0v4"]
size = Vector2(132, 2.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_itjs3"]
size = Vector2(3, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vfkw6"]
size = Vector2(6.5, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jxyw6"]
size = Vector2(5, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8uhy5"]
size = Vector2(2.59375, 26)

[node name="BottleStand" type="Node2D"]
scale = Vector2(2, 1)
script = ExtResource("1_ucxgr")

[node name="Stand0" type="StaticBody2D" parent="." groups=["Stand"]]
position = Vector2(0, -4)
collision_layer = 2
collision_mask = 3

[node name="Bottle" parent="Stand0" groups=["Bottle"] instance=ExtResource("1_su4lb")]
position = Vector2(16, 0)

[node name="Bottle2" parent="Stand0" groups=["Bottle"] instance=ExtResource("1_su4lb")]
position = Vector2(38, 0)

[node name="Bottle3" parent="Stand0" groups=["Bottle"] instance=ExtResource("1_su4lb")]
position = Vector2(60, 0)

[node name="Shelf" type="CollisionShape2D" parent="Stand0"]
position = Vector2(56.5, 2.125)
shape = SubResource("RectangleShape2D_5n0v4")

[node name="Bracer" type="StaticBody2D" parent="Stand0"]
collision_layer = 2
collision_mask = 3

[node name="Bracer" type="CollisionShape2D" parent="Stand0/Bracer"]
position = Vector2(6.5, -13)
shape = SubResource("RectangleShape2D_itjs3")

[node name="Bracer2" type="CollisionShape2D" parent="Stand0/Bracer"]
position = Vector2(27.25, -13)
shape = SubResource("RectangleShape2D_vfkw6")

[node name="Bracer3" type="CollisionShape2D" parent="Stand0/Bracer"]
position = Vector2(49, -13)
shape = SubResource("RectangleShape2D_jxyw6")

[node name="Bracer4" type="CollisionShape2D" parent="Stand0/Bracer"]
position = Vector2(68.7969, -13)
shape = SubResource("RectangleShape2D_8uhy5")

[node name="Stand1" type="StaticBody2D" parent="." groups=["Stand"]]
position = Vector2(25, -67)
collision_layer = 2
collision_mask = 3

[node name="Bottle" parent="Stand1" groups=["Bottle"] instance=ExtResource("1_su4lb")]
position = Vector2(16, 0)

[node name="Bottle2" parent="Stand1" groups=["Bottle"] instance=ExtResource("1_su4lb")]
position = Vector2(38, 0)

[node name="Bottle3" parent="Stand1" groups=["Bottle"] instance=ExtResource("1_su4lb")]
position = Vector2(60, 0)

[node name="Shelf" type="CollisionShape2D" parent="Stand1"]
position = Vector2(56.5, 2.125)
shape = SubResource("RectangleShape2D_5n0v4")

[node name="Bracer" type="StaticBody2D" parent="Stand1"]
collision_layer = 2
collision_mask = 2

[node name="Bracer" type="CollisionShape2D" parent="Stand1/Bracer"]
position = Vector2(6.5, -13)
shape = SubResource("RectangleShape2D_itjs3")

[node name="Bracer2" type="CollisionShape2D" parent="Stand1/Bracer"]
position = Vector2(27.25, -13)
shape = SubResource("RectangleShape2D_vfkw6")

[node name="Bracer3" type="CollisionShape2D" parent="Stand1/Bracer"]
position = Vector2(49, -13)
shape = SubResource("RectangleShape2D_jxyw6")

[node name="Bracer4" type="CollisionShape2D" parent="Stand1/Bracer"]
position = Vector2(68.7969, -13)
shape = SubResource("RectangleShape2D_8uhy5")

[node name="Stand2" type="StaticBody2D" parent="." groups=["Stand"]]
position = Vector2(50, -131)
collision_layer = 2
collision_mask = 3

[node name="Bottle" parent="Stand2" groups=["Bottle"] instance=ExtResource("1_su4lb")]
position = Vector2(16, 0)

[node name="Bottle2" parent="Stand2" groups=["Bottle"] instance=ExtResource("1_su4lb")]
position = Vector2(38, 0)

[node name="Bottle3" parent="Stand2" groups=["Bottle"] instance=ExtResource("1_su4lb")]
position = Vector2(60, 0)

[node name="Shelf" type="CollisionShape2D" parent="Stand2"]
position = Vector2(65, 1.625)
shape = SubResource("RectangleShape2D_5n0v4")

[node name="Bracer" type="StaticBody2D" parent="Stand2"]
collision_layer = 2
collision_mask = 3

[node name="Bracer" type="CollisionShape2D" parent="Stand2/Bracer"]
position = Vector2(6.5, -13)
shape = SubResource("RectangleShape2D_itjs3")

[node name="Bracer2" type="CollisionShape2D" parent="Stand2/Bracer"]
position = Vector2(27.25, -13)
shape = SubResource("RectangleShape2D_vfkw6")

[node name="Bracer3" type="CollisionShape2D" parent="Stand2/Bracer"]
position = Vector2(49, -13)
shape = SubResource("RectangleShape2D_jxyw6")

[node name="Bracer4" type="CollisionShape2D" parent="Stand2/Bracer"]
position = Vector2(68.7969, -13)
shape = SubResource("RectangleShape2D_8uhy5")
